Update contact page and add button homepage

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,24 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Source+Sans+3:ital,wght@0,300;0,400;1,200&family=Young+Serif&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+     <div class="container-photos">
+      <div class="link">
+        <a href="./index.html">
+          <button
+            type="button"
+            class="btn btn-primary d-flex justify-content-center"
+          >
+            Homepage
+          </button>
+        </a>
+      </div>
+    <div class="container-contact">
+      <h1>Contact me 📮</h1>
+      <a href="mailto: vanessa.josy@icloud.com">Write me an email!📧</a>
+    </div>
+  </body>
 </html>
