--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" content="This is a page for croissants!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/style.css" />
-    <title>Croissant</title>
+    <title>Croissant.com</title>
   </head>
   <body>
     <div class="container">
@@ -53,8 +53,8 @@
           </div>
         </div>
         <!-- Start of image croissant  -->
-        <div class="col-sm-8 mt-5">
-          <img src="./images/croissant.png" alt="Croissant" />
+        <div class="col-sm-8 mt-5 d-flex justify-content-center">
+          <img src="./images/croissant.png" alt="Croissant on a plate" />
         </div>
       </div>
     </div>
